--- a/ChromeExtension/PopupDetector/manifest.json
+++ b/ChromeExtension/PopupDetector/manifest.json
@@ -3,14 +3,15 @@
   "description": "웹 페이지의 팝업을 감지하는 프로그램입니다.",
   "version": "1.0",
   "manifest_version": 3,
-  "background": {
-    "service_worker": "background.js"
+  "background":{
+	"service_worker": "background.js"
   },
-  "permissions": [
-    "storage",
-    "activeTab",
-    "scripting"
-  ],
+  "icons": {
+    "16": "/images/icons8-color-16.png",
+    "32": "/images/icons8-color-32.png",
+    "48": "/images/icons8-color-48.png",
+    "128": "/images/icons8-color-128.png"
+  },
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
@@ -20,11 +21,5 @@
       "128": "/images/icons8-color-128.png"
     }
   },
-  "icons": {
-    "16": "/images/icons8-color-16.png",
-    "32": "/images/icons8-color-32.png",
-    "48": "/images/icons8-color-48.png",
-    "128": "/images/icons8-color-128.png"
-  },
-  "options_page": "options.html"
+  "permissions": ["activeTab", "scripting", "storage"]
 }
